--- a/graphpanel4.ui
+++ b/graphpanel4.ui
@@ -1,80 +1,78 @@
-<ui version="4.0" >
- <author></author>
- <comment></comment>
- <exportmacro></exportmacro>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>GraphPanelBase</class>
- <widget class="QWidget" name="GraphPanelBase" >
-  <property name="geometry" >
+ <widget class="QWidget" name="GraphPanelBase">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>360</width>
-    <height>164</height>
+    <height>166</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Graph Settings</string>
   </property>
-  <layout class="QGridLayout" >
-   <property name="margin" >
+  <layout class="QGridLayout">
+   <property name="margin">
     <number>9</number>
    </property>
-   <property name="spacing" >
+   <property name="spacing">
     <number>6</number>
    </property>
-   <item row="0" column="0" >
-    <widget class="QLabel" name="TextLabel1" >
-     <property name="text" >
+   <item row="0" column="0">
+    <widget class="QLabel" name="TextLabel1">
+     <property name="text">
       <string>y=</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="2" >
-    <widget class="QLineEdit" name="ymax" />
+   <item row="2" column="2">
+    <widget class="QLineEdit" name="ymax"/>
    </item>
-   <item row="2" column="1" >
-    <widget class="QLineEdit" name="ymin" />
+   <item row="2" column="1">
+    <widget class="QLineEdit" name="ymin"/>
    </item>
-   <item row="1" column="1" >
-    <widget class="QLineEdit" name="xmin" />
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="xmin"/>
    </item>
-   <item row="1" column="2" >
-    <widget class="QLineEdit" name="xmax" />
+   <item row="1" column="2">
+    <widget class="QLineEdit" name="xmax"/>
    </item>
-   <item row="3" column="0" colspan="2" >
-    <widget class="QPushButton" name="pb_draw" >
-     <property name="text" >
+   <item row="3" column="0" colspan="2">
+    <widget class="QPushButton" name="pb_draw">
+     <property name="text">
       <string>Draw</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="0" >
-    <widget class="QLabel" name="TextLabel3" >
-     <property name="text" >
+   <item row="2" column="0">
+    <widget class="QLabel" name="TextLabel3">
+     <property name="text">
       <string>Y range:</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="2" >
-    <widget class="QPushButton" name="pb_close" >
-     <property name="text" >
+   <item row="3" column="2">
+    <widget class="QPushButton" name="pb_close">
+     <property name="text">
       <string>Close</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0" >
-    <widget class="QLabel" name="TextLabel2" >
-     <property name="text" >
+   <item row="1" column="0">
+    <widget class="QLabel" name="TextLabel2">
+     <property name="text">
       <string>X range:</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="1" colspan="2" >
-    <widget class="QLineEdit" name="le_func" />
+   <item row="0" column="1" colspan="2">
+    <widget class="QLineEdit" name="le_func"/>
    </item>
   </layout>
  </widget>
- <layoutdefault spacing="6" margin="11" />
+ <layoutdefault spacing="6" margin="11"/>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <resources/>
  <connections>
@@ -84,11 +82,11 @@
    <receiver>GraphPanelBase</receiver>
    <slot>close()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>274</x>
      <y>134</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>314</x>
      <y>178</y>
     </hint>
