--- a/graphwindow4.ui
+++ b/graphwindow4.ui
@@ -1,47 +1,45 @@
-<ui version="4.0" >
- <author></author>
- <comment></comment>
- <exportmacro></exportmacro>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>GraphWindowBase</class>
- <widget class="QWidget" name="GraphWindowBase" >
-  <property name="geometry" >
+ <widget class="QWidget" name="GraphWindowBase">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>472</width>
-    <height>429</height>
+    <width>490</width>
+    <height>428</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Graph Window</string>
   </property>
-  <layout class="QGridLayout" >
-   <property name="margin" >
+  <layout class="QGridLayout">
+   <property name="margin">
     <number>9</number>
    </property>
-   <property name="spacing" >
+   <property name="spacing">
     <number>6</number>
    </property>
-   <item row="0" column="0" colspan="2" >
-    <widget class="QLabel" name="graph" >
-     <property name="text" >
+   <item row="0" column="0" colspan="2">
+    <widget class="QLabel" name="graph">
+     <property name="text">
       <string>TextLabel</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1" >
-    <widget class="QPushButton" name="pb_close" >
-     <property name="text" >
+   <item row="1" column="1">
+    <widget class="QPushButton" name="pb_close">
+     <property name="text">
       <string>Close</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0" >
+   <item row="1" column="0">
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>341</width>
        <height>20</height>
@@ -51,7 +49,7 @@
    </item>
   </layout>
  </widget>
- <layoutdefault spacing="6" margin="11" />
+ <layoutdefault spacing="6" margin="11"/>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <resources/>
  <connections>
@@ -61,11 +59,11 @@
    <receiver>GraphWindowBase</receiver>
    <slot>close()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>20</x>
      <y>20</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>20</x>
      <y>20</y>
     </hint>
